hphp/hack/test/typecheck/static_method_visibility.php
<?hh

final class Foo {
  private static function bar(): void {}
}

function baz(): void {
  Foo::bar();
}
